@@ -23,6 +23,7 @@
         - Support CSP in overview SVG image.
         - Fix guided tour to work with CSP.
         - Fix strict-mode in tour.
+        - Define resources in Makefile.
 
 0.40 2020-12-17
         - Modernize ES and fix in-loops.
